# flutter_quizz_app

./: .actrc  .gitignore  Doc_tech.md  Makefile  README.md  codemagic.yaml  docker-compose.dev.yml  docker-compose.yml  guide.md
.github/workflows/: backend-cd.yml  backend-ci-local.yml  backend-ci.yml  coverage-manual.yml  format.yml  frontend-ci.yml  helloworld.yml  tests-manuel.yml
backend/: .dockerignore  .env  .env.test  Cargo.toml  codecov.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  env.mtls  readme.md  rustfmt.toml
backend/api_gateway/: Cargo.toml  Dockerfile
backend/api_gateway/doc/: doc.md
backend/api_gateway/src/: config.rs  main.rs  mod.rs  routes.rs
backend/api_gateway/src/middleware/: auth.rs  circuit_breaker.rs  loggings.rs  mod.rs  rate_limit.rs
backend/api_gateway/src/mtls/: client.rs  config.rs  mod.rs  server.rs
backend/api_gateway/src/proxy/: mod.rs  service_proxy.rs
backend/auth_service/: .gitignore  Cargo.toml  Dockerfile
backend/auth_service/doc/: deploy.md  docs.md  readme.md
backend/auth_service/migrations/: 20251129000001_init_schema.sql  20251205000003_add_mtls_tracking.sql
backend/auth_service/migrations/seed/: 20251129000002_seed_data.sql
backend/auth_service/src/: config.rs  error.rs  main.rs
backend/auth_service/src/application/: mod.rs
backend/auth_service/src/application/services/: auth_service.rs  jwt_service.rs  mod.rs  password_service.rs  quota_service.rs  security_service.rs  user_service.rs
backend/auth_service/src/domain/: dtos.rs  entities.rs  mod.rs
backend/auth_service/src/infrastrcture/: mod.rs
backend/auth_service/src/infrastrcture/repositories/: mod.rs  session_repository.rs  user_repository.rs
backend/auth_service/src/infrastructure/repositories/: permission_repository.rs  quota_repository.rs  security_repository.rs  user_repository.rs
backend/auth_service/src/mtls/: config.rs  mod.rs  server.rs
backend/auth_service/src/presentation/: mod.rs
backend/auth_service/src/presentation/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/auth_service/src/presentation/routes/: admin_routes.rs  auth_routes.rs  mod.rs  user_routes.rs
backend/doc/: 01_DEVOPS.md  02_CI_CD.md  03_KUBERNETES.md  04_MAP_SERVICE.md  05_TESTING.md  06_DEPLOYMENT.md  07_MONITORING.md  08_SECURITY.md  09_USER_MONETI_HORSLIGNE.md  10_Plan_d_ajout_service_user_moni_hl.md  11_plan_pour_l_ajout.md  DATABASE.md  DEVELOPMENT.md  api.md  architecture.md  changelog.md  plugin.md  readme_old.md  setup.md
backend/geography_service/: .env  Cargo.toml
backend/geography_service/src/: main.rs
backend/map_service/: .env  Cargo.toml  Dockerfile
backend/map_service/src/: main.rs
backend/quiz_core_service/: Cargo.toml
backend/quiz_core_service/migrations/: 20251017132316_create_reponses_tables.sql  20251021131009_add_domain_system.sql  20251027_add_question_categories.sql  20251030000001_init_schema.sql
backend/quiz_core_service/migrations/seeds/: 01_seed_geography_data.sql
backend/quiz_core_service/src/: config.rs  json_utf8.rs  main.rs  routes.rs
backend/quiz_core_service/src/dto/: mod.rs  question_dto.rs  quiz_dto.rs  reponse_dto.rs  session_dto.rs
backend/quiz_core_service/src/handlers/: mod.rs  question_handler.rs  quiz_handler.rs  reponse_handler.rs  session_handler.rs
backend/quiz_core_service/src/middleware/: mod.rs  mtls_validation.rs
backend/quiz_core_service/src/models/: mod.rs  question.rs  quiz.rs  reponse.rs  session.rs
backend/quiz_core_service/src/mtls/: config.rs  mod.rs  server.rs
backend/quiz_core_service/src/plugins/: mod.rs  plugin_trait.rs  registry.rs
backend/quiz_core_service/src/plugins/geography/: geography_plugin.rs  mod.rs
backend/quiz_core_service/src/repositories/: mod.rs  question_repo.rs  quiz_repo.rs  reponse_repo.rs  session_repo.rs
backend/quiz_core_service/src/services/: mod.rs  question_service.rs  quiz_service.rs  reponse_service.rs  session_service.rs
backend/quiz_service/: .env  Cargo.toml  readme.md
backend/quiz_service/migrations/: 20251017132251_create_quizzes_tables.sql  20251017132305_create_questions_tables.sql  20251017132324_create_sessions_tables.sql  20251017145309_fix_decimal_to_double_precision.sql
backend/quiz_service/src/: config.rs  main.rs  modele.rs  routes.rs
backend/quiz_service/src/dto/: mod.rs  question_dto.rs  quiz_dto.rs  reponse_dto.rs  session_dto.rs
backend/quiz_service/src/handlers/: mod.rs  question_handler.rs  quiz_handler.rs  reponse_handler.rs  session_handler.rs
backend/quiz_service/src/models/: question.rs  quiz.rs
backend/quiz_service/src/repositories/: mod.rs  question_repo.rs  quiz_repo.rs  reponse_repo.rs
backend/quiz_service/src/services/: mod.rs  question_service.rs  quiz_service.rs  reponse_service.rs
backend/quiz_service/test/: test-quiz-api.ps1
backend/scripts/certs/: 01-generate-ca.ps1  02-generate-service-certs.ps1
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs
backend/shared/src/tls/: client.rs  config.rs  mod.rs  server.rs  validator.rs
backend/tests/: api_answers_test.rs  api_health_test.rs  api_sessions_test.rs  api_tests.rs  common.rs
backend/tests/helpers/: mod.rs
docker/: backend-dev.Dockerfile  backend-prod-simple.Dockerfile  backend.Dockerfile  backend_chef.Dockerfile  template_cargo_chef.Dockerfile
docker/init-scripts/: 01-auth-db.sql  02-subscription-db.sql  04-ads-db.sql  05-quiz-db-SEED.sql  05-quiz-db.sql
frontend/: .env  codemagic.yaml  notes.md  pubspec.yaml  readme.md
frontend/ios/: export_options.plist
frontend/lib/: app.dart  main.dart
frontend/test/: widget_test.dart
k8s/: docs.md
k8s/kind/: Makefile  kind-config.yaml
k8s/local/: 00-namespace.yaml  01-configmap.yaml  02-secret.yaml  03-postgres-service.yaml  04-postgres-statefulset.yaml  05-backend-service.yaml  06-backend-deployment.yaml  07-ingress.yaml  ingress.yaml  namespace.yaml
k8s/production/: hpa.yaml  (+1 more)
scripts/: .dockerignore  backup-db.sh  cleanup.sh  deploy-local.sh  format-all.ps1  restore-db.sh  seed-database.ps1  setup-k8s-local.sh  test-api.ps1
(+96 files in other folders)
