[workspace]
resolver = "2"
members = [
    "shared",
    "quiz_core_service",
    "auth_service",
    "api_gateway",
#    "subscription_service",
#    "ads_service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quiz Geo Team"]
license = "MIT"

[workspace.dependencies]
# ============================================
# DÉPENDANCES EXISTANTES (versions utilisateur)
# ============================================
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Cache (déjà présent dans ton projet)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "tls-rustls", "uuid", "chrono", "json", "macros"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# ============================================
# NOUVELLES DÉPENDANCES (pour auth et autres services)
# ============================================

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP client (pour OAuth et inter-service calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
tokio-util = "0.7"

