[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
shared = { path = "../shared" }
hyper = "1.0"
hyper-util = "0.1"
tokio-rustls = "0.25"