[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["set-header"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json"] }
jsonwebtoken = { workspace = true }
thiserror = "1.0"

# mTLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }