[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Security - Authentication
bcrypt = "0.15"
jsonwebtoken = "9"

# Security - Validation
validator = { version = "0.18", features = ["derive"] }
ammonia = "4.0"

# Security - Rate Limiting
governor = "0.6"
dashmap = "5.5"

# Security - CAPTCHA
hcaptcha = "2.4"

# Crypto
sha2 = "0.10"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Environment
dotenvy = "0.15"

# Utilities
async-trait = "0.1"

# mTLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

[dev-dependencies]
tokio-test = "0.4"