[package]
name = "quiz_core_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"

#  mTLS support avec ring backend
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.0"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Local dependency
shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
dotenv = "0.15"