[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Depuis le workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = "0.9.0-alpha.1"
tracing = "0.1.41"