[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Depuis le workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = "0.9.0-alpha.1"
tracing = "0.1.41"

rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
x509-parser = "0.15"
webpki = "0.22"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }