[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Depuis le workspace
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# TLS/mTLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
webpki-roots = "0.26"

# HTTP client avec mTLS
reqwest = { workspace = true, default-features = false, features = ["rustls-tls-manual-roots", "json"] }

# Async runtime
tokio = { workspace = true }